Fixed unsightly gap between contact and footer divs.

--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -24,8 +24,7 @@ p.date{ color:#595959; font-size:125%;}
 	background-color:#383838;
 	color:white;
 	text-align:center;
-	position:relative;
-	height:40px;
+	padding:10px 0px;
 	bottom:0px;
 	font-family: CaviarDreams, courier, sans-serif;
 }
@@ -42,14 +41,9 @@ p.date{ color:#595959; font-size:125%;}
 	padding:150px;
 }
 
-#main_content
-{
-	width:100%;
-	height:100%;
-	background-color:white;
-}
 div.page_content
 {
+	height:100%;
 	padding:50px 346px;
 	text-align:center;
 }
@@ -107,10 +101,17 @@ h3
 	margin:0px;
 	font-family: CaviarDreams, courier, sans-serif;
 	font-size:200%;
-	color:#8B795E;
+	color:red;
 	animation-name: fade-in;
 	animation-duration: 1.5s;
 }
+
+/* DEFINE SECTION BACKGROUND COLOURS */
+#about_me{ background-color:white; }
+#CV{ background-color:#EDEDED; }
+#projects{ background-color:white; }
+#contact_me{ background-color:#EDEDED; }
+
 
 #navigation_bar_container
 {
@@ -154,5 +155,5 @@ a.nav_element
 }
 a.nav_element:hover{ background-color:#333333; }	
 
-#main_container{ top:0; margin-top:50px; }
+
 </style>
